refactor: restructure chat API to REST — fix auto-title update with includeMessages flag